fixed z-index of loading again

--- a/fireball/src/App.css
+++ b/fireball/src/App.css
@@ -175,4 +175,5 @@ footer {
   color: white;
   justify-content: center;
   align-items: center;
+  z-index:9999;
 }
